--- a/css/style14.css
+++ b/css/style14.css
@@ -68,6 +68,7 @@
 body {
     background-color: var(--cor-de-fundo);
     font-family: 'Poppins', sans-serif;
+    user-select: none;
 
     /*Cabeçalho*/
     header {
