--- a/css/style17.css
+++ b/css/style17.css
@@ -31,7 +31,7 @@
     transition-duration: 0.4s;
     font-family: 'Poppins', sans-serif;
     align-content: center;
-    display: flex;
+    display: inline-flex;
 }
 .botao-primario:hover {
     background-color: var(--cor-escura);
