--- a/css/style19.css
+++ b/css/style19.css
@@ -30,6 +30,7 @@
     border-radius: 8px;
     transition-duration: 0.4s;
     font-family: 'Poppins', sans-serif;
+    padding-inline: 0;
 }
 .botao-primario:hover {
     background-color: var(--cor-escura);
@@ -43,6 +44,7 @@
     border-radius: 8px;
     transition-duration: 0.4s;
     font-family: 'Poppins', sans-serif;
+    padding-inline: 0;
 }
 .botao-secundario:hover {
     color: var(--cor-esbranquiçada);
