--- a/css/style21.css
+++ b/css/style21.css
@@ -30,7 +30,7 @@
     border-radius: 8px;
     transition-duration: 0.4s;
     font-family: 'Poppins', sans-serif;
-    max-height: fit-content;
+    max-height: min-content;
 }
 .botao-primario:hover {
     background-color: var(--cor-escura);
@@ -44,7 +44,7 @@
     border-radius: 8px;
     transition-duration: 0.4s;
     font-family: 'Poppins', sans-serif;
-    max-height: fit-content;
+    max-height: min-content;
 }
 .botao-secundario:hover {
     color: var(--cor-esbranquiçada);
