Formulário horizontal flex

--- a/css/style25.css
+++ b/css/style25.css
@@ -107,6 +107,9 @@ body {
                     a {
                         color: var(--cor-esbranquiçada);
                     }
+                    form {
+                        display: flex;
+                    }
                 }
             }
         }
