--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,10 @@ body {
     /*Corpo*/
     main {
         margin: 10px 10px;
+        
+        h1 {
+            color: var(--cor-escura);
+        }
     }
 
 }
