--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,11 @@ body {
             padding: 10px;
             background-color: var(--cor-principal);
             border-radius: 10px;
+            max-width: fit-content;
             
-            input {
+            .Opcao {
                 margin-right: 15px;
+                color: var(--cor-esbranquiçada)
             }
         }
     }
