--- a/css/style.css
+++ b/css/style.css
@@ -188,11 +188,11 @@ body {
         }
 
         .Logon {
-            .Login {
+            .LogOption {
                 display: none;
             }
-            .Registro {
-                display: none;
+            .LogOption.ativo {
+                display: block; 
             }
         }
     }
