--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
     --cor-de-fundo: var(--cor-esbranquiçada);
     --botao-primario: var(--cor-principal);
     --botao-secundario: #00000000;
+    --fonte-principal: 'Poppins', sans-serif;
 }
 * {
     margin: 0;
@@ -29,7 +30,7 @@
     background-color: var(--botao-primario);
     border-radius: 8px;
     transition-duration: 0.4s;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--fonte-principal);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -46,7 +47,7 @@
     background-color: var(--botao-secundario);
     border-radius: 8px;
     transition-duration: 0.4s;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--fonte-principal);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -64,7 +65,7 @@
     cursor: text;
     background-color: var(--cor-esbranquiçada);
     border-radius: 8px;
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--fonte-principal);
     box-sizing: border-box;
     transition-duration: 0.4s;
 }
@@ -75,7 +76,7 @@
 /*Conteúdo principal do site*/
 body {
     background-color: var(--cor-de-fundo);
-    font-family: 'Poppins', sans-serif;
+    font-family: var(--fonte-principal);
     user-select: none;
 
     /*Cabeçalho*/
@@ -177,6 +178,7 @@ body {
                 padding: 10px;
                 border-radius: 10px;
                 border: none;
+                font-family: var(--fonte-principal);
             }
 
             .Opcao:hover {
