--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@ body {
                 border-radius: 10px;
                 border: none;
                 font-family: var(--fonte-principal);
+                cursor: pointer;
             }
 
             .Opcao:hover {
