--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,17 @@ body {
                 display: none;
             }
             .LogOption.ativo {
-                display: block; 
+                display: flex;
+                flex-direction: column;
+                margin: 20px; 
+
+                form {
+                    margin: 10px auto;
+
+                    input {
+                        width: 100%;
+                    }
+                }
             }
         }
     }
