--- a/css/style.css
+++ b/css/style.css
@@ -210,10 +210,21 @@ body {
                 margin: 20px; 
 
                 form {
-                    margin: 10px auto;
+                    margin: 10px;
 
                     input {
                         width: 100%;
+                        border: none;
+                        padding: 3%;
+                        border-radius: 8px;
+                        margin-bottom: 8px;
+                        transition-duration: 0.4s;
+                    }
+                    input:hover {
+                        box-shadow: 0px 0px 0px 2px var(--cor-principal) inset;
+                    }
+                    button {
+                        margin-top: 15px;
                     }
                 }
             }
