--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ body {
                 font-family: var(--fonte-principal);
                 cursor: pointer;
                 font-variant: small-caps;
+                font-size: 16px;
             }
 
             .Opcao:hover {
