--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,40 @@
     box-shadow: 0px 0px 0px 2px var(--cor-principal) inset;
 }
 
+.CaixaAlerta {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000055;
+    backdrop-filter: blur(2px);
+    justify-content: center;
+    align-items: center;
+
+    .CaixaAlertaConteudo {
+        background-color: var(--cor-branca);
+        padding: 20px;
+        border-radius: 8px;
+        width: 300px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+        h2 {
+            font-size: 22px;
+            margin-bottom: 10px;
+            color: var(--cor-principal);
+        }
+
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+            color: var(--cor-secundaria);
+        }
+    }
+}
+
 /*Conteúdo principal do site*/
 body {
     background-color: var(--cor-de-fundo);
