--- a/css/style.css
+++ b/css/style.css
@@ -89,10 +89,10 @@
     .CaixaAlertaConteudo {
         background-color: var(--cor-branca);
         padding: 20px;
-        border-radius: 8px;
+        border-radius: 10px;
         width: 300px;
         text-align: center;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
 
         h2 {
             font-size: 22px;
