Correções de responsividade

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@
         border-radius: 10px;
         width: 300px;
         text-align: center;
-        /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
+        box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.1);
 
         h2 {
             font-size: 22px;
@@ -272,6 +272,10 @@ body {
                     }
                     input[id="SenhaR"] {
                         max-width: 88%;
+                        /*Responsivo */
+                        @media (max-width: 407px) {
+                            max-width: 85%;
+                        }
                     }
                     input[id="SenhaL"] {
                         max-width: 85%;
