--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@
         p {
             font-size: 16px;
             margin-bottom: 20px;
-            color: var(--cor-secundaria);
+            color: var(--cor-escura);
         }
 
         .BotaoPrimario {
