--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,6 @@ body {
     font-family: var(--fonte-principal);
     user-select: none;
     min-height: 100vh;
-    display: flex;
 
     /*Cabeçalho*/
     header {
@@ -211,27 +210,37 @@ body {
         position: fixed;
         border: none;
 
-        #BarraLateralUsuario {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            margin-bottom: 24px;
+        #BarraLateralConteudo {
+            padding: 12px;
 
-            #BarraLateralAvatar {
-                width: 50px;
-                height: 50px;
-                object-fit: cover;
-                border-radius: 20px;
+            #BarraLateralUsuario {
+                display: flex;
+                align-items: center;
+                gap: 8px;
+                margin-bottom: 24px;
+    
+                #BarraLateralAvatar {
+                    width: 50px;
+                    height: 50px;
+                    object-fit: cover;
+                    border-radius: 20px;
+                }
+    
+                #BarraLateralUsuarioInfo {
+                    display: flex;
+                    flex-direction: column;
+    
+                    span:last-child {
+                        color: #6b6b6b;
+                        font-size: 12px;
+                    }
+                }
             }
 
-            #BarraLateralUsuarioInfo {
+            #BarraLateralItens {
                 display: flex;
                 flex-direction: column;
-
-                span:last-child {
-                    color: #6b6b6b;
-                    font-size: 12px;
-                }
+                gap: 8px;
             }
         }
 
