--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ body {
     /*Corpo*/
     main {
         margin: 10px 10px;
-        display: inline-block;
+        display: block;
 
         h1 {
             color: var(--cor-escura);
