Melhoria css barra lateral

--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,15 @@ body {
                 display: flex;
                 flex-direction: column;
                 gap: 8px;
+
+                .BarraLateralItem {
+                    color: var(--cor-esbranquiçada);
+                }
             }
+        }
+
+        #BarraLateralLogout .BotaoSecundario {
+            justify-self: end;
         }
 
     }
