--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@
 }
 .BotaoSecundario:hover {
     color: var(--cor-esbranquiçada);
-    background-color: var(--cor-escura);
+    background-color: var(--botao-primario);
 }
 /**Formulários */
 .FormularioCampoPrimario {
@@ -223,7 +223,7 @@ body {
                     width: 50px;
                     height: 50px;
                     object-fit: cover;
-                    border-radius: 20px;
+                    border-radius: 100%;
                 }
     
                 #BarraLateralUsuarioInfo {
@@ -240,10 +240,20 @@ body {
             #BarraLateralItens {
                 display: flex;
                 flex-direction: column;
-                gap: 8px;
+                gap: 4px;
 
                 .BarraLateralItem {
-                    color: var(--cor-esbranquiçada);
+                    padding: 10px;
+                    border-radius: 8px;
+                    transition-duration: 0.4s;
+
+                    a {
+                        color: var(--cor-esbranquiçada);
+                    }
+                }
+
+                .BarraLateralItem:hover {
+                    background-color: var(--botao-primario);
                 }
             }
         }
