--- a/css/style.css
+++ b/css/style.css
@@ -258,9 +258,9 @@ body {
             }
         }
 
-        #BarraLateralLogout .BotaoSecundario {
+        /*#BarraLateralLogout .BotaoSecundario {
             justify-self: end;
-        }
+        }*/
 
     }
 
