--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,13 @@ body {
                 }
             }
         }
+
+        .CorpoAba {
+            display: none;
+        }
+        .CorpoAba.ativo {
+            display: block;
+        }
     }
 
 }
