--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@ body {
             
             .Opcao {
                 color: var(--cor-esbranquiçada);
-                background-color: #00000000;
+                background-color: var(--botao-secundario);
                 transition-duration: 0.4s;
                 padding: 10px;
                 border-radius: 40px;
@@ -406,6 +406,8 @@ body {
                         display: flex;
                         margin-top: 15px;
                         justify-self: center;
+                        justify-content: center;
+                        align-items: center;
                         gap: 4px;
                         
                         .BotaoSecundario {
