--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@
 /*Variáveis*/
 :root {
     --cor-escura: #1d1d1c;
-    --cor-principal: #101010;
-    --cor-secundaria: #4f4b4b;
+    --cor-principal: #323030;
+    --cor-secundaria: #706e6e;
     --cor-esbranquiçada: #f4ebdf;
     --cor-branca: #fff9ef;
     --cor-de-fundo: var(--cor-esbranquiçada);
