Melhoria do formulário de envio

--- a/css/style.css
+++ b/css/style.css
@@ -130,6 +130,11 @@
 .CaixaAlerta.ativo {
     display: flex;
 }
+.CabecalhoPequeno {
+    background-color: var(--cor-secundaria);
+    border-radius: 200px;
+    display: flex;
+}
 
 /*Conteúdo principal do site*/
 body {
